# batista-gpu-benchmark

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml
assets/models/: ATTRIBUTION.md  environment.glb
packaging/: batista-gpu-benchmark.desktop  build-appimage.sh
packaging/flatpak/: com.allanbatista.GpuBenchmark.yml
scripts/: build_environment.py  fetch-model.sh
snap/: snapcraft.yaml
src/: app.rs  main.rs
src/bench/: gpu_timing.rs  metrics.rs  mod.rs  report.rs  sampler.rs
src/config/: mod.rs
src/platform/: mod.rs  telemetry.rs
src/render_cfg/: mod.rs
src/rt/: mod.rs
src/scene/: mod.rs  orbits.rs
src/ui/: mod.rs  overlay.rs  panels.rs  results.rs  system_info.rs
