[package]
name = "batista-gpu-benchmark"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform GPU benchmark built on Bevy + wgpu"
repository = "https://github.com/allanbatista/batista-gpu-benchmark"
authors = ["Allan Batista <allan@allanbatista.com.br>"]

[package.metadata.deb]
maintainer = "Allan Batista <allan@allanbatista.com.br>"
copyright = "2026, Allan Batista"
section = "utils"
priority = "optional"
extended-description = """\
Renders a deterministic PBR scene (astronaut in a circular spaceship room, \
orbited by seeded colored lights) and captures per-frame timing into \
reproducible reports (summary.json + frames.csv). Vulkan-first, with \
experimental ray-traced lighting."""
depends = "$auto, libvulkan1"
assets = [
    ["target/release/batista-gpu-benchmark", "usr/bin/", "755"],
    ["assets/models/*", "usr/share/batista-gpu-benchmark/assets/models/", "644"],
    ["packaging/batista-gpu-benchmark.desktop", "usr/share/applications/", "644"],
    ["packaging/icon.png", "usr/share/icons/hicolor/256x256/apps/batista-gpu-benchmark.png", "644"],
    ["README.md", "usr/share/doc/batista-gpu-benchmark/", "644"],
]

[package.metadata.generate-rpm]
auto-req = "auto"
assets = [
    { source = "target/release/batista-gpu-benchmark", dest = "/usr/bin/batista-gpu-benchmark", mode = "755" },
    { source = "assets/models/*", dest = "/usr/share/batista-gpu-benchmark/assets/models/", mode = "644" },
    { source = "packaging/batista-gpu-benchmark.desktop", dest = "/usr/share/applications/batista-gpu-benchmark.desktop", mode = "644" },
    { source = "packaging/icon.png", dest = "/usr/share/icons/hicolor/256x256/apps/batista-gpu-benchmark.png", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/batista-gpu-benchmark/README.md", mode = "644", doc = true },
]

[dependencies]
# No default features: skips gamepad (libudev) and audio (alsa) — not needed for a GPU
# benchmark and they drag system deps on Linux. Composed from bevy's umbrella features.
bevy = { version = "0.19", default-features = false, features = [
    "default_app",       # asset, log, state, async executor, reflection
    "3d_bevy_render",    # render, core_pipeline, pbr, gltf, anti_alias, post_process, gizmos
    "scene",             # bevy_world_serialization (GLB scene instancing)
    "picking",           # bevy_egui routes pointer input through bevy_picking
    # bevy_egui (default features) orders its render pass `.after(bevy_ui's
    # ui_pass)`. Without the bevy_ui render plugin that anchor doesn't exist,
    # the ordering constraint evaporates and egui lands at a NONDETERMINISTIC
    # point among the post-process passes — UI intermittently not rendered.
    "bevy_ui",
    "ui_bevy_render",
    "std",
    "multi_threaded",
    "bevy_winit",
    "custom_cursor",
    "x11",
    "wayland",
    "sysinfo_plugin",
    "tonemapping_luts",
    "smaa_luts",
    "ktx2",
    "zstd_rust",
    "png",
    "jpeg",              # GLB models commonly embed JPEG textures (DamagedHelmet does)
] }
bevy_egui = "0.41"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
sysinfo = "0.39"
chrono = "0.4"
# Same wgpu bevy 0.19 uses. Direct dep for the pre-App --list-adapters probe,
# and to turn the native GL/GLES backend on (bevy 0.19 doesn't enable it).
wgpu = { version = "29", default-features = false, features = ["gles"] }

[dependencies.uuid]
version = "1"
optional = true

[features]
default = []
# Requires the NVIDIA DLSS SDK at build time (env DLSS_SDK) — see README. Never built in CI.
dlss = ["bevy/dlss", "dep:uuid"]
# Experimental ray-traced lighting (bevy_solari). Vulkan + RT-capable GPU only.
rt-experimental = ["bevy/bevy_solari"]

[profile.release]
lto = "thin"
